2008-09-09  Paul Pogonyshev  <pogonyshev@gmx.net>

	Bug 549517 – add __repr__ to gio.Drive, gio.Mount and gio.Volume

	* gio/gio.override (_wrap_g_drive_tp_repr, _wrap_g_mount_tp_repr):
	New functions.

	* gio/gvolume.override (_wrap_g_volume_tp_repr): New function.

2008-09-09  Loïc Minier  <lool@dooz.org>

	Bug 551227 – Missing AC_CONFIG_MACRO_DIR([m4])

	* configure.ac: Add AC_CONFIG_MACRO_DIR.

2008-09-08  Paul Pogonyshev  <pogonyshev@gmx.net>

	Bug 551056 – make codegen not import when corresponding argument
	types are not registered

	* codegen/override.py (import_pat): Add support for optional 'for'
	clause.
	(Overrides.__parse_override): Handle it.

	* codegen/codegen.py (SourceWriter.write_imports)
	(SourceWriter.write_object_imports): Adapt for changes in
	get_imports() return value.
	(is_registered_object): New function.

2008-09-07  Frederic Peters  <fpeters@0d.be>

	* gio/gfile.override (_wrap_g_file_load_contents)
	(_wrap_g_file_load_contents_finish): Fix typos breaking
	compilation (bug #551212).

2008-09-07  Jonathan Matthew  <jonathan@d14n.org>

	Bug 551059 – GFile load_contents methods chop data at first \0

	* gio/gfile.override:
	Use 's#' (length specified) rather than 's' when constructing
	result values in load_contents and load_contents_finish.

2008-09-03  Johan Dahlin  <johan@gnome.org>

	* configure.ac:
	Post release version bump

=== 2.15.4 ===
2008-09-03  Johan Dahlin  <johan@gnome.org>

	* NEWS: Update

2008-09-03  Loïc Minier  <lool@dooz.org>

	* gobject/pygpointer.c: (pyg_register_pointer):
	Fix typo (s/&type/type) introduced in r886 causing weird crashes on
	x86-64; bug #550463.

2008-09-01  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* codegen/argtypes.py: add G_TYPE_CLOSURE boxed type in codegen.

2008-08-31  Johan Dahlin  <johan@gnome.org>

	* configure.ac:
	Post release version bump

=== 2.15.3 ===
2008-08-31  Johan Dahlin  <johan@gnome.org>

	* NEWS: Update

2008-08-30  Gustavo J. A. M. Carneiro  <gjc@inescporto.pt>
